--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,43 @@ body{
     color: var(--color-2);
 }
 
+.container_us{
+    width: 1160px;
+    height: 592px;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: 140px;
+    left: 160px;
+}
+
+.sec_1_1{
+    display: flex;
+    flex-direction: column;
+    gap: 83px;
+}
+
+.tittle_1_1 h1{
+    font-family: "Roboto-Bold";
+    font-size: 72px;
+    color: var(--color-1);
+    position: relative;
+}
+
+.text_1{
+    font-family: "Roboto-Regular";
+    font-size: 36px;
+    font-weight: lighter;
+    color: var(--color-1);
+    position: relative;
+    top: 10px;
+}
+
+.img_2_2{
+    position: relative;
+    top: 160px;
+}
+
 
 
 
